add APIs defined in the spec
